2006-09-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/ObjectName.java:
	Implemented.
	
2006-09-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* resource/gnu/classpath/tools/orbd: New directory.
	* resource/gnu/classpath/tools/rmic: Likewise.
	* resource/gnu/classpath/tools/rmid: Likewise.
	* resource/gnu/classpath/tools/rmiregistry: Likewise.
	* resource/gnu/classpath/tools/tnameserv: Likewise.
	* tools/gnu/classpath/tools/giop: Move contents to...
	* tools/gnu/classpath/tools/orbd,
	tools/gnu/classpath/tools/tnameserv: New directories.
	* tools/gnu/classpath/tools/rmi/rmic: Move contents to...
	* tools/gnu/classpath/tools/rmic: New directory.
	* tools/gnu/classpath/tools/rmi/rmid: Move contents to...
	* tools/gnu/classpath/tools/rmid: New directory.
	* tools/gnu/classpath/tools/rmi/registry: Move contents to...
	* tools/gnu/classpath/tools/rmiregistry: New directory.
	* resource/gnu/classpath/tools/orbd/messages.properties: New file.
	* resource/gnu/classpath/tools/rmic/messages.properties: Likewise.
	* resource/gnu/classpath/tools/rmid/messages.properties: Likewise.
	* resource/gnu/classpath/tools/rmiregistry/messages.properties:
	Likewise.
	* resource/gnu/classpath/tools/tnameserv/messages.properties:
	Likewise.
	* tools/gnu/classpath/tools/orbd/Main.java,
	tools/gnu/classpath/tools/orbd/Messages.java,
	tools/gnu/classpath/tools/orbd/PersistentContext.java,
	tools/gnu/classpath/tools/orbd/PersistentContextMap.java,
	tools/gnu/classpath/tools/orbd/PersistentMap.java,
	tools/gnu/classpath/tools/rmic/AbstractMethodGenerator.java,
	tools/gnu/classpath/tools/rmic/CompilationError.java,
	tools/gnu/classpath/tools/rmic/Generator.java,
	tools/gnu/classpath/tools/rmic/GiopIo.java,
	tools/gnu/classpath/tools/rmic/HashFinder.java,
	tools/gnu/classpath/tools/rmic/Main.java,
	tools/gnu/classpath/tools/rmic/Messages.java,
	tools/gnu/classpath/tools/rmic/MethodGenerator.java,
	tools/gnu/classpath/tools/rmic/RMICException.java,