@@ -1,3 +1,14 @@
+2006-09-22  Casey Marshall  <csm@gnu.org>
+
+	* configure.ac (AC_CHECK_FUNCS): check for `readdir_r.'
+	* native/jni/java-io/java_io_VMFile.c (Java_java_io_VMFile_list):
+	allocate `filename,' and handle changes to `cpio_readDir.'
+	* native/jni/native-lib/cpio.c (cpio_readDir): use `readdir_r' if
+	available; copy the filename into the destination buffer; return
+	an error code if readdir returns NULL, but errno is 0.
+	* native/jni/native-lib/cpio.h (cpio_readDir): change second
+	parameter to `const char *.'
+
 2006-09-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/ObjectName.java:
